test/parse_error/unbalanced_parentheses.bms
const zero: Uint((32) = 0
